@@ -5,13 +5,14 @@ export(boxAgeWeight)
 export(countAgeCheek)
 export(countAgeGender)
 export(countEmbryos)
-export(countIntroductionYearExoten)
+export(countIntroductionYear)
 export(countYearAge)
 export(countYearProvince)
 export(countYearSchade)
 export(createSchadeSummaryData)
 export(createSpaceData)
 export(createTrendData)
+export(cumulativeIntroductionYear)
 export(dataModuleServer)
 export(datatableModuleUI)
 export(formatSchadeSummaryData)
@@ -94,6 +95,7 @@ importFrom(stats,predict)
 importFrom(stats,qnorm)
 importFrom(stats,update)
 importFrom(trias,indicator_introduction_year)
+importFrom(trias,indicator_total_year)
 importFrom(utils,read.csv)
 importFrom(utils,tail)
 importFrom(utils,write.csv)
