@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/exoten_indicatorIntroductionYear.R
-\name{countIntroductionYearExoten}
-\alias{countIntroductionYearExoten}
+\name{countIntroductionYear}
+\alias{countIntroductionYear}
 \title{Plot number of new introductions per year}
 \usage{
-countIntroductionYearExoten(data, region = NULL)
+countIntroductionYear(data, region = NULL)
 }
 \arguments{
 \item{data}{}
